--- a/src/main/resources/templates/word.html
+++ b/src/main/resources/templates/word.html
@@ -126,10 +126,10 @@
 <!--                </tr>-->
 
                 <tr class="bg">
-                    <td width="15%">参数名</td>
-                    <td width="15%">数据类型</td>
-                    <td width="15%">是否必填</td>
-                    <td width="50%">说明</td>
+                    <td >参数名</td>
+                    <td >数据类型</td>
+                    <td >是否必填</td>
+                    <td colspan="2">说明</td>
                 </tr>
 
                 <th:block th:each="request, c:${table.requestList}">
@@ -139,25 +139,14 @@
                         <!-- <td th:text="${request.paramType}"></td>-->
                         <td th:if="${request.require}" th:text="Y"></td>
                         <td th:if="${!request.require}" th:text="N"></td>
-                        <td th:text="${request.remark}"></td>
+                        <td colspan="2" th:text="${request.remark}"></td>
                         <!--                        <td th:if="${request.modelAttr}" th:text="asdfagadfg"></td>-->
                     </tr>
                     <th:block th:if="${request.modelAttr}">
-                        <tbody th:include="this::request(${request.modelAttr.properties},${c.count} + '.', 1)"/>
+                        <tbody th:include="this::requestForEach(${request.modelAttr.properties},${c.count} + '.', 1)"/>
                     </th:block>
                 </th:block>
 
-                <!--                <tr class="bg">-->
-                <!--                    <td>状态码</td>-->
-                <!--                    <td colspan="2">描述</td>-->
-                <!--                    <td colspan="2">说明</td>-->
-                <!--                </tr>-->
-
-                <!--                <tr th:each="response:${table.responseList}">-->
-                <!--                    <td th:text="${response.name}"></td>-->
-                <!--                    <td colspan="2" th:text="${response.description}"></td>-->
-                <!--                    <td colspan="2" th:text="${response.remark}"></td>-->
-                <!--                </tr>-->
 
                 <tr class="bg">
                     <td>返回属性名</td>
@@ -185,7 +174,7 @@
     </div>
 </div>
 
-<th:block th:fragment="request(properties,count, lv)">
+<th:block th:fragment="requestForEach(properties,count, lv)">
     <th:block th:each="p,c : ${properties}">
         <tr>
             <td align="left" th:text="${count} + '' + ${c.count} + '.' + ${p.name}"
@@ -194,10 +183,10 @@
 <!--            <td></td>-->
             <td th:if="${p.require}" th:text="Y"></td>
             <td th:if="${!p.require}" th:text="N"></td>
-            <td th:text="${p.description}"></td>
+            <td colspan="2" th:text="${p.description}"></td>
         </tr>
         <th:block th:unless="${#lists.isEmpty(p.properties)}"
-                  th:include="this::request(${p.properties},${count} + '' + ${c.count} + '.',${lv+1})"/>
+                  th:include="this::requestForEach(${p.properties},${count} + '' + ${c.count} + '.',${lv+1})"/>
     </th:block>
 </th:block>
 
