--- a/src/main/resources/templates/word.html
+++ b/src/main/resources/templates/word.html
@@ -129,7 +129,7 @@
                     <tr th:if="${request.modelAttr == null}">
                         <td align="left" th:text="${c.count} + '.' +${request.name}"></td>
                         <td th:text="${request.type}"></td>
-                        <td th:text="${request.require} ? 'Y' : 'N' "></td>
+                        <td th:text="${request.require} ? 'true' : 'false' "></td>
                         <td colspan="2" th:text="${request.remark}"></td>
                     </tr>
 
@@ -193,8 +193,8 @@
             <tr>
                 <td align="left" th:text="${c.count} + '.' + ${p.name}" th:style="|padding-left:${10*lv}px|"></td>
                 <td th:text="${p.type}"></td>
-                <td th:if="${p.require}" th:text="Y"></td>
-                <td th:if="${!p.require}" th:text="N"></td>
+                <td th:if="${p.require}" th:text="true"></td>
+                <td th:if="${!p.require}" th:text="false"></td>
                 <td th:text="${p.description}"></td>
             </tr>
             <th:block th:unless="${#lists.isEmpty(p.properties)}"
